[package]
name = "poc_cyberpunk_pyo3"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.16.0", features=["auto-initialize"] }
rocket = "0.5.0-rc.1"
uuid = { version = "0.4", features = ["v4"] }

